# data-go-kr-mcp

./: .env.example  .gitignore  LICENSE  README.md
docs/: ADDING_API.md  CLAUDE_DESKTOP_CONFIG.md
python/: pyproject.toml
python/servers/air-quality/: README.md  pyproject.toml
python/servers/air-quality/src/: server.py
python/servers/weather-forecast/: .env.example  README.md  pyproject.toml
python/servers/weather-forecast/src/: server.py
python/shared/: pyproject.toml
python/shared/src/data_go_kr_shared/: __init__.py  client.py  errors.py  types.py
scripts/: call-test.mjs  create-server.mjs  smoke-test.mjs
templates/python/: pyproject.toml.hbs
templates/python/src/: server.py.hbs
templates/typescript/: package.json.hbs
templates/typescript/src/: client.ts.hbs  index.ts.hbs  tools.ts.hbs  types.ts.hbs
typescript/: package-lock.json  package.json
